refactor code for predicting card value

--- a/shared_brain_regions.ipynb
+++ b/shared_brain_regions.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subject 10 has fusiform gyrus L\n",
-      "Subject 12 has fusiform gyrus L\n"
+      "Subject 07 has intraparietal sulcus R\n",
+      "Subject 15 has intraparietal sulcus R\n",
+      "Subject 16 has intraparietal sulcus R\n"
      ]
     }
    ],
    "source": [
-    "optimal_channel_combinations_for_movement = []\n",
+    "optimal_channel_combinations = []\n",
     "\n",
     "brain_areas_of_interest = {'angular gyrus R':0,\n",
     "                            'cingulate cortex (posterior) R':0, \n",
@@ -70,9 +71,11 @@
     "                           'intraparietal sulcus R':0,\n",
     "                           'middle temporal gyrus L':0, \n",
     "                           'middle temporal gyrus R':0,\n",
+    "                           'middle frontal gyrus L':0,\n",
     "                           'occipital gyrus L':0, \n",
     "                           'occipital gyrus R':0, \n",
     "                           'parietal operculum L':0,\n",
+    "                           'superior temporal gyrus (planum temporale) L':0,\n",
     "                           'superior temporal sulcus R':0, \n",
     "                           'supramarginal gyrus L':0,\n",
     "                           'supramarginal gyrus R':0}\n",
@@ -90,41 +93,40 @@
     "        if area in elec_areas:\n",
     "            brain_areas_of_interest[area] += 1\n",
     "\n",
-    "    if 'insular cortex (anterior) R' in elec_areas:\n",
-    "        print(f'Subject {sub} has fusiform gyrus L')\n",
+    "    if 'intraparietal sulcus R' in elec_areas:\n",
+    "        print(f'Subject {sub} has intraparietal sulcus R')\n",
     "\n",
-    "    optimal_channel_combinations_for_movement.append(np.load(f'Metrics/Subject{sub}_logistic_movement_optimal_channel_combination_10.npy'))"
+    "    optimal_channel_combinations.append(np.load(f'Metrics/Subject{sub}_logistic_visual_card_optimal_channel_combination_10.npy'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['middle temporal gyrus L', 4],\n",
-       " ['angular gyrus R', 3],\n",
-       " ['cuneus R', 2],\n",
-       " ['fusiform gyrus L', 2],\n",
-       " ['hippocampus (anterior) L', 2],\n",
-       " ['insular cortex (anterior) R', 2],\n",
-       " ['middle temporal gyrus R', 2],\n",
+       "[['middle temporal gyrus L', 3],\n",
+       " ['middle temporal gyrus R', 3],\n",
+       " ['superior temporal gyrus (planum temporale) L', 3],\n",
+       " ['cingulate cortex (posterior) L', 2],\n",
+       " ['intraparietal sulcus R', 2],\n",
        " ['occipital gyrus R', 2],\n",
        " ['parietal operculum L', 2],\n",
-       " ['supramarginal gyrus L', 2],\n",
-       " ['supramarginal gyrus R', 2]]"
+       " ['parietooccipital sulcus R', 2],\n",
+       " ['superior temporal gyrus (planum temporale) R', 2],\n",
+       " ['supramarginal gyrus L', 2]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Logistic Regression\n",
-    "find_shared_brain_areas(optimal_channel_combinations_for_movement)"
+    "find_shared_brain_areas(optimal_channel_combinations)"
    ]
   },
   {
@@ -154,12 +156,12 @@
    ],
    "source": [
     "# LDA\n",
-    "find_shared_brain_areas(optimal_channel_combinations_for_movement)"
+    "find_shared_brain_areas(optimal_channel_combinations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,12 +180,13 @@
        " 'occipital gyrus L': 3,\n",
        " 'occipital gyrus R': 3,\n",
        " 'parietal operculum L': 3,\n",
+       " 'superior temporal gyrus (planum temporale) L': 4,\n",
        " 'superior temporal sulcus R': 4,\n",
        " 'supramarginal gyrus L': 5,\n",
        " 'supramarginal gyrus R': 3}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,6 +194,13 @@
    "source": [
     "brain_areas_of_interest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
